# hay_utils

./: CMakeLists.txt  LICENSE  README.md
.woodpecker/: man.yml  test.yml
include/hay/: utils.h
man/: hay_utils.3  hay_utils.md
src/: utils.c
tests/: test_itos_err.c  test_itos_negative.c  test_itos_positive.c  test_stoi_default.c  test_stoi_err.c  test_stoi_negative.c  test_stoi_positive.c  test_stou.c  test_stou_err.c
